--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[paper=a4,fontsize=14pt]{scrartcl}
+\documentclass[paper=a4,fontsize=15pt]{scrartcl}
 
 % packages
 \usepackage[english]{babel}
@@ -17,12 +17,13 @@
 \usepackage{wrapfig}
 
 \titlespacing*{\section}
-{0pt}{2.5ex plus 1ex minus .2ex}{1.0ex plus .2ex}
-
-\setul{2pt}{.4pt}% 1pt below contents
+{0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
 \geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
+
+% set underscore \ul{} x pt below contents
+\setul{2pt}{.4pt}
 
 % set default font
 \renewcommand{\familydefault}{\sfdefault}
@@ -63,7 +64,7 @@
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, Ruby, Python, C/C++, Clojure, Scala}
+\newsummary{languages}{Golang, Scala, Ruby, Python, Clojure, C/C++}
 \quarterspace
 \newsummary{technologies}{Redis, Postgres, MongoDB, gRPC, Envoy, Consul}
 \quarterspace
@@ -72,59 +73,73 @@
   \href{https://landing.google.com/sre/book.html}{\ul{Google - Site Reliability Engineering}}
 }
 
-\section*{Work Experience}{}
+\section*{Experience}{}
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/datadog.png}
+\normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
-$\vert$ Distributed Systems Engineer Intern
-{\hfill \textit{Jan 2018 - Apr 2018}}
-\begin{itemize}[noitemsep,leftmargin=17pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
-  \item Took ownership of a critical service by ensuring its resiliency and
+$\vert$ \small Distributed Systems Engineer Intern
+{\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
+  \item Took ownership of a critical service written in Golang by ensuring its resiliency and
     availability.
-  \item Proposed and implemented RPC deadline, cancellation, exponential backoff to protect
-    against cascading failures.
+  \item Migrated the service's inter-process communication layer (40k QPS) to gRPC.
+  \item Proposed and implemented RPC deadline and cancellation to prevent cascading failures.
 \end{itemize}
 
 \fullspace
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/universe.png}
+\normalsize
 \noindent \href{https://universe.com}{\ul{\textbf{Universe}}}
-$\vert$ Full-Stack Engineer Intern
-{\hfill \textit{May 2017 - Aug 2017}}
-\begin{itemize}[noitemsep,leftmargin=17pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
-  \item Worked with the platform team to release Universe’s first public GraphQL API.
-  \item Worked with designers and product managers to implement features with Rails and React.
+$\vert$ \small Full-Stack Engineer Intern
+{\hfill \footnotesize \textit{May 2017 - Aug 2017}}
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
+  \item Worked with the platform team to release Universe’s first GraphQL API.
+  \item Rewrote the deployment and orchestration framework for
+    \href{https://www.universe.com/sell-tickets-on-your-website-with-universe-widgets}{\ul{Universe's
+        embeddable widgets}}
 \end{itemize}
 
 \fullspace
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plotly.png}
+\normalsize
 \noindent \href{https://plot.ly}{\textbf{\ul{Plotly}}}
-$\vert$ Front-End Engineer Intern
-{\hfill \textit{May 2016 - Aug 2016}}
-\begin{itemize}[noitemsep,leftmargin=17pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
-  \item Maintained and developed features for a large-scale React and Redux app.
+$\vert$ \small Front-End Engineer Intern
+{\hfill \footnotesize \textit{May 2016 - Aug 2016}}
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
+  \item Maintained and developed features for a
+    \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
+    React and Redux.
+  \item Implemented authorization for the app to distinguish between free and
+    premium users.
 \end{itemize}
 
 \section*{Projects}{}
 {
   \noindent \large
-  \href{https://github.com/lpan/viw}{\ul{lpan/viw}} | \normalsize \textit{
-    A light weight VI-like text editor written in C and ncurses
-  }
+  \href{https://github.com/lpan/viw}{\ul{lpan/viw}} | \normalsize \textit{\small
+    A light weight VI-like text editor written in C and ncurses}
 }
-\begin{itemize}[noitemsep,leftmargin=17pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
   \item \textbf{HackerNews front-paged}​ with 273​ upvotes and 195​ GitHub stars.
   \item Designed and implemented an undo algorithm inspired by log-based replication​.
 \end{itemize}
 
 
 \section*{Writings}{}
-\begin{itemize}[noitemsep,leftmargin=17pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
   \item Lessons learned from writing a text editor in C: \http{lpan.io/what-i-learnt-from-viw}
-  \item How gRPC improves reliability and fault tolerance: \http{lpan.io/coming-soon}
+  \item How gRPC improves reliability and fault tolerance: \http{lpan.io/migrating-to-grpc/}
 \end{itemize}
 
 \section*{Education}{}
 \noindent \textbf{University of Waterloo} Bachelor of Software Engineering \par
-\normalsize
+\quarterspace
+\footnotesize
 \noindent \textit{Sep 2016 - May 2021 (expected)} \par
 \noindent 3.9/4.0 GPA, \textit{Dean's Honours List}
 
