--- a/resume.tex
+++ b/resume.tex
@@ -66,25 +66,35 @@
 \section*{Summary}{}
 \newsummary{languages}{Golang, Scala, Ruby, Python, Clojure, C/C++}
 \quarterspace
-\newsummary{technologies}{Redis, Postgres, MongoDB, gRPC, Envoy, Consul}
+\newsummary{technologies}{Kubernetes, Spinnaker, Redis, Postgres, gRPC, Envoy, Consul}
 \quarterspace
-\newsummary{books}{
-  \href{http://dataintensive.net/}{\ul{Designing Data-Intensive Applications}},
-  \href{https://landing.google.com/sre/book.html}{\ul{Google - Site Reliability Engineering}}
-}
+\newsummary{interests}{distributed systems, stream processing, database reliability}
 
 \section*{Experience}{}
+\noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
+\normalsize
+\noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
+$\vert$ \small Infrastructure Engineer Intern
+{\hfill \footnotesize \textit{Sep 2018 - present (ongoing)}}
+\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
+  \small
+  \item Building tools/applications with Kubernetes, Spinnaker, Python, Salt to
+    enable scaling at PlanGrid.
+\end{itemize}
+
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/datadog.png}
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
-$\vert$ \small Distributed Systems Engineer Intern
+$\vert$ \small Back-End Engineer Intern
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Took ownership of a critical service written in Golang by ensuring its resiliency and
-    availability.
-  \item Migrated the service's inter-process communication layer (40k QPS) to gRPC.
-  \item Proposed and implemented RPC deadline and cancellation to prevent cascading failures.
+  \item Worked on the metrics submission pipeline that streams millions of data
+    points per second.
+  \item Owned a critical service written in Golang by ensuring its resiliency
+    and availability.
+  \item Proposed and migrated the service's IPC layer to gRPC, details in
+    \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
 \end{itemize}
 
 \fullspace
@@ -112,8 +122,6 @@ $\vert$ \small Front-End Engineer Intern
   \item Maintained and developed features for a
     \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
     React and Redux.
-  \item Implemented authorization for the app to distinguish between free and
-    premium users.
 \end{itemize}
 
 \section*{Projects}{}
@@ -133,7 +141,7 @@ $\vert$ \small Front-End Engineer Intern
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Lessons learned from writing a text editor in C: \http{lpan.io/what-i-learnt-from-viw}
-  \item How gRPC improves reliability and fault tolerance: \http{lpan.io/migrating-to-grpc/}
+  \item How gRPC helps reliability and fault tolerance at DataDog: \http{lpan.io/migrating-to-grpc/}
 \end{itemize}
 
 \section*{Education}{}
@@ -141,6 +149,6 @@ $\vert$ \small Front-End Engineer Intern
 \quarterspace
 \footnotesize
 \noindent \textit{Sep 2016 - May 2021 (expected)} \par
-\noindent 3.9/4.0 GPA, \textit{Dean's Honours List}
+\noindent 3.73 cGPA, \textit{Dean's Honours List}
 
 \end{document}
