--- a/resume.tex
+++ b/resume.tex
@@ -64,7 +64,7 @@
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, Scala, Ruby, Python, Clojure, C/C++}
+\newsummary{languages}{Golang, JavaScript, C/C++, Ruby, Python, Scala, Clojure}
 \quarterspace
 \newsummary{technologies}{Kubernetes, Spinnaker, Redis, Postgres, gRPC, Envoy, Consul}
 \quarterspace
@@ -75,26 +75,26 @@
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
 $\vert$ \small Infrastructure Engineer Intern
-{\hfill \footnotesize \textit{Sep 2018 - present (ongoing)}}
+{\hfill \footnotesize \textit{Sep 2018 - ongoing}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Building tools/applications with Kubernetes, Spinnaker, Python, Salt to
     enable scaling at PlanGrid.
 \end{itemize}
 
+\fullspace
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/datadog.png}
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
-$\vert$ \small Back-End Engineer Intern
+$\vert$ \small Distributed Systems Engineer Intern
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Worked on the metrics submission pipeline that streams millions of data
     points per second.
-  \item Owned a critical service written in Golang by ensuring its resiliency
-    and availability.
+  \item Owned a critical service written in Golang by ensuring it meets its SLOs.
   \item Proposed and migrated the service's IPC layer to gRPC, details in
-    \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
+    \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}.}
 \end{itemize}
 
 \fullspace
@@ -108,7 +108,7 @@ $\vert$ \small Full-Stack Engineer Intern
   \item Worked with the platform team to release Universe’s first GraphQL API.
   \item Rewrote the deployment and orchestration framework for
     \href{https://www.universe.com/sell-tickets-on-your-website-with-universe-widgets}{\ul{Universe's
-        embeddable widgets}}
+        embeddable widgets}.}
 \end{itemize}
 
 \fullspace
@@ -122,26 +122,17 @@ $\vert$ \small Front-End Engineer Intern
   \item Maintained and developed features for a
     \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
     React and Redux.
+  \item Implemented authorization for the app to distinguish between free and
+    premium users.
 \end{itemize}
-
-\section*{Projects}{}
-{
-  \noindent \large
-  \href{https://github.com/lpan/viw}{\ul{lpan/viw}} | \normalsize \textit{\small
-    A light weight VI-like text editor written in C and ncurses}
-}
-\begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
-  \small
-  \item \textbf{HackerNews front-paged}​ with 273​ upvotes and 195​ GitHub stars.
-  \item Designed and implemented an undo algorithm inspired by log-based replication​.
-\end{itemize}
-
 
 \section*{Writings}{}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Lessons learned from writing a text editor in C: \http{lpan.io/what-i-learnt-from-viw}
-  \item How gRPC helps reliability and fault tolerance at DataDog: \http{lpan.io/migrating-to-grpc/}
+  \item \href{http://lpan.io/what-i-learnt-from-viw}{\ul{Lessons learned from
+        writing a text editor in C}} (\textbf{HackerNews front-paged!}).
+  \item \href{http://lpan.io/migrating-to-grpc}{\ul{How gRPC helps improve
+        reliability and fault tolerance at DataDog}}.
 \end{itemize}
 
 \section*{Education}{}
