--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 {0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
+\geometry{left=1.2cm, top=1.4cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -66,9 +66,9 @@
 \section*{Summary}{}
 \newsummary{languages}{Golang, JavaScript, C/C++, Ruby, Python, Scala, Clojure}
 \quarterspace
-\newsummary{technologies}{Kubernetes, Spinnaker, Redis, Postgres, gRPC, Envoy, Consul}
+\newsummary{interests}{Distributed systems, Stream processing, Database reliability}
 \quarterspace
-\newsummary{interests}{distributed systems, stream processing, database reliability}
+\newsummary{technologies}{Kubernetes, Spinnaker, Redis, Postgres, gRPC, Envoy, Consul}
 
 \section*{Experience}{}
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
@@ -78,8 +78,8 @@ $\vert$ \small Infrastructure Engineer Intern
 {\hfill \footnotesize \textit{Sep 2018 - ongoing}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Building tools/applications with Kubernetes, Spinnaker, Python, Salt to
-    enable scaling at PlanGrid.
+  \item Building tools/applications with Kubernetes, Spinnaker, Salt, Python,
+    and Golang to enable scaling at PlanGrid.
 \end{itemize}
 
 \fullspace
@@ -92,8 +92,9 @@ $\vert$ \small Distributed Systems Engineer Intern
   \small
   \item Worked on the metrics submission pipeline that streams millions of data
     points per second.
-  \item Owned a critical service written in Golang by ensuring it meets its SLOs.
-  \item Proposed and migrated the service's IPC layer to gRPC, details in
+  \item Owned the time-series creation service written in Golang by ensuring it
+    met its SLOs.
+  \item Spearheaded the migration of the service's IPC layer to gRPC, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}.}
 \end{itemize}
 
@@ -105,10 +106,11 @@ $\vert$ \small Full-Stack Engineer Intern
 {\hfill \footnotesize \textit{May 2017 - Aug 2017}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Worked with the platform team to release Universe’s first GraphQL API.
-  \item Rewrote the deployment and orchestration framework for
+  \item Pioneered and shipped Universe's first front-end app that consumes its
+    new GraphQL API.
+  \item Designed and implemented an in-house framework for building
     \href{https://www.universe.com/sell-tickets-on-your-website-with-universe-widgets}{\ul{Universe's
-        embeddable widgets}.}
+        embedded widgets}.}
 \end{itemize}
 
 \fullspace
