I think working with automated testing is more of a valuable skill

--- a/resume.tex
+++ b/resume.tex
@@ -124,8 +124,8 @@ $\vert$ \small Front-End Engineer Intern
   \item Maintained and developed features for a
     \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
     React and Redux.
-  \item Implemented authorization for the app to distinguish between free and
-    premium users.
+  \item Contributed to the development of an e2e testing framework written in
+    Python Selenium.
 \end{itemize}
 
 \section*{Writings}{}
