remove periods at the end of the bullet

--- a/resume.tex
+++ b/resume.tex
@@ -79,7 +79,7 @@ $\vert$ \small Infrastructure Engineer Intern
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Building tools/applications with Kubernetes, Spinnaker, Salt, Python,
-    and Golang to enable scaling at PlanGrid.
+    and Golang to enable scaling at PlanGrid
 \end{itemize}
 
 \fullspace
@@ -91,11 +91,11 @@ $\vert$ \small Distributed Systems Engineer Intern
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Worked on the metrics submission pipeline that streams millions of data
-    points per second.
+    points per second
   \item Owned the time-series creation service written in Golang by ensuring it
-    met its SLOs.
+    met its SLOs
   \item Spearheaded the migration of the service's IPC layer to gRPC, details in
-    \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}.}
+    \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
 \end{itemize}
 
 \fullspace
@@ -107,10 +107,10 @@ $\vert$ \small Full-Stack Engineer Intern
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Pioneered and shipped Universe's first front-end app that consumes its
-    new GraphQL API.
+    new GraphQL API
   \item Designed and implemented an in-house framework for building
     \href{https://www.universe.com/sell-tickets-on-your-website-with-universe-widgets}{\ul{Universe's
-        embedded widgets}.}
+        embedded widgets}}
 \end{itemize}
 
 \fullspace
@@ -123,18 +123,18 @@ $\vert$ \small Front-End Engineer Intern
   \small
   \item Maintained and developed features for a
     \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
-    React and Redux.
+    React and Redux
   \item Contributed to the development of an e2e testing framework written in
-    Python Selenium.
+    Python Selenium
 \end{itemize}
 
 \section*{Writings}{}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item \href{http://lpan.io/what-i-learnt-from-viw}{\ul{Lessons learned from
-        writing a text editor in C}} (\textbf{HackerNews front-paged}).
+        writing a text editor in C}} (\textbf{HackerNews front-paged})
   \item \href{http://lpan.io/migrating-to-grpc}{\ul{How gRPC helps improve
-        reliability and fault tolerance at DataDog}}.
+        reliability and fault tolerance at DataDog}}
 \end{itemize}
 
 \section*{Education}{}
