--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 {0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=1.4cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
+\geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -64,11 +64,11 @@
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, JavaScript, C/C++, Ruby, Python, Scala, Clojure}
+\newsummary{languages}{Golang, Python, JavaScript, C/C++, Ruby, Clojure}
 \quarterspace
-\newsummary{interests}{Distributed systems, Stream processing, Database reliability}
+\newsummary{interests}{Cloud-native infrastructure, Distributed systems, Database design}
 \quarterspace
-\newsummary{technologies}{Kubernetes, Spinnaker, Redis, Postgres, gRPC, Envoy, Consul}
+\newsummary{technologies}{Kubernetes, Spinnaker, Istio, Envoy, gRPC, Redis, Postgres, Consul}
 
 \section*{Experience}{}
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
@@ -78,8 +78,10 @@ $\vert$ \small Infrastructure Engineer Intern
 {\hfill \footnotesize \textit{Sep 2018 - ongoing}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Building tools/applications with Kubernetes, Spinnaker, Salt, Python,
-    and Golang to enable scaling at PlanGrid
+  \item Built Spinnaker pipelines to allow phased rollout for istio
+    gateway-wide configuration changes
+  \item Currently building tools and systems with Kubernetes, Spinnaker, Python,
+    to enable scaling at PlanGrid
 \end{itemize}
 
 \fullspace
@@ -141,7 +143,7 @@ $\vert$ \small Front-End Engineer Intern
 \noindent \textbf{University of Waterloo} Bachelor of Software Engineering \par
 \quarterspace
 \footnotesize
-\noindent \textit{Sep 2016 - May 2020 (expected)} \par
-\noindent 3.73 cGPA, \textit{Dean's Honours List}
+\noindent \textit{Sep 2016 - May 2021 (expected)} \par
+\noindent 89.7\% cumulative GPA, \textit{Dean's Honours List}
 
 \end{document}
