--- a/resume.tex
+++ b/resume.tex
@@ -80,8 +80,8 @@ $\vert$ \small Infrastructure Engineer Intern
   \small
   \item Built Spinnaker pipelines to allow phased rollout for istio
     gateway-wide configuration changes
-  \item Currently building tools and systems with Kubernetes, Spinnaker, Python,
-    to enable scaling at PlanGrid
+  \item Currently building tools and services that work with Kubernetes and
+    Spinnaker, to enable scaling at PlanGrid
 \end{itemize}
 
 \fullspace
