more about plangrid

--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 {0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
+\geometry{left=1.2cm, top=1cm, right=1.2cm, bottom=1cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -64,9 +64,9 @@
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, Python, JavaScript, C/C++, Ruby, Clojure}
+\newsummary{languages}{Golang, Python, JavaScript, C/C++, Ruby}
 \quarterspace
-\newsummary{interests}{Cloud-native infrastructure, Distributed systems, Database design}
+\newsummary{interests}{Distributed systems, Database design, Real-time data pipelines}
 \quarterspace
 \newsummary{technologies}{Kubernetes, Spinnaker, Istio, Envoy, gRPC, Redis, Postgres, Consul}
 
@@ -78,10 +78,11 @@ $\vert$ \small Infrastructure Engineer Intern
 {\hfill \footnotesize \textit{Sep 2018 - ongoing}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Built Spinnaker pipelines to allow phased rollout for istio
-    gateway-wide configuration changes
-  \item Currently building tools and services that work with Kubernetes and
-    Spinnaker, to enable scaling at PlanGrid
+  \item Worked on one of the infra teams that owns the tooling around PlanGrid's
+    deployment systems, as well as the network service mesh
+  \item Built Spinnaker pipelines to allow phased rollout for ingress-related
+    infrastructure changes
+  \item Extended the existing deployment system to support pre-deploy smoke tests
 \end{itemize}
 
 \fullspace
