use personal email

--- a/resume.tex
+++ b/resume.tex
@@ -60,7 +60,7 @@
 {\fontsize{35}{40}\selectfont \hfill Lawrence Pan \par}
 \halfspace
 
-{\normalsize \hfill lawrence.pan@edu.uwaterloo.ca \par}
+{\normalsize \hfill lawrencefeipan@gmail.com \par}
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
