--- a/resume.tex
+++ b/resume.tex
@@ -64,11 +64,11 @@
 {\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, Python, JavaScript, C/C++, Ruby}
+\newsummary{languages}{Golang, Python, Scala, JavaScript, C/C++}
 \quarterspace
-\newsummary{interests}{Distributed systems, Database design, Real-time data pipelines}
+\newsummary{interests}{Distributed systems, Real-time data pipelines, System programming}
 \quarterspace
-\newsummary{technologies}{Kubernetes, Spinnaker, Istio, Envoy, gRPC, Redis, Postgres, Consul}
+\newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, gRPC}
 
 \section*{Experience}{}
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
@@ -78,11 +78,11 @@ $\vert$ \small Infrastructure Engineer Intern
 {\hfill \footnotesize \textit{Sep 2018 - ongoing}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Worked on one of the infra teams that owns the tooling around PlanGrid's
-    deployment systems, as well as the network service mesh
   \item Built Spinnaker pipelines to allow phased rollout for ingress-related
     infrastructure changes
   \item Extended the existing deployment system to support pre-deploy smoke tests
+  \item Contributed to the effort of instrumenting distributed tracing, and
+    implementing Istio service mesh inside PlanGrid's Kubernetes cluster
 \end{itemize}
 
 \fullspace
