--- a/resume.tex
+++ b/resume.tex
@@ -93,7 +93,7 @@ $\vert$ \small Distributed Systems Engineer Intern
 {\hfill \footnotesize \textit{Jan 2018 - Apr 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Worked on the metrics submission pipeline that streams millions of data
+  \item Worked on the metrics submission pipeline that streams \textbf{millions} of data
     points per second
   \item Owned the time-series creation service written in Golang by ensuring it
     met its SLOs
