--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 {0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=1cm, right=1.2cm, bottom=1cm, footskip=.5cm}
+\geometry{left=1.2cm, top=0.8cm, right=1.2cm, bottom=0.8cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -57,7 +57,7 @@
 % -------------------------------------------------------------------------------------
 \begin{document}
 
-{\fontsize{35}{40}\selectfont \hfill Lawrence Pan \par}
+{\fontsize{30}{40}\selectfont \hfill Lawrence Pan \par}
 \halfspace
 
 {\normalsize \hfill lawrencefeipan@gmail.com \par}
@@ -75,7 +75,7 @@
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
 $\vert$ \small Infrastructure Engineer Intern
-{\hfill \footnotesize \textit{Sep 2018 - ongoing}}
+{\hfill \footnotesize \textit{Sep 2018 - Dec 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Built Spinnaker pipelines to allow phased rollout for ingress-related
@@ -97,7 +97,8 @@ $\vert$ \small Distributed Systems Engineer Intern
     points per second
   \item Owned the time-series creation service written in Golang by ensuring it
     met its SLOs
-  \item Spearheaded the migration of the service's IPC layer to gRPC, details in
+  \item Migrated the service's IPC layer to gRPC. Implemented consistent hashing
+    and request termination, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
 \end{itemize}
 
