--- a/resume.tex
+++ b/resume.tex
@@ -66,7 +66,7 @@
 \section*{Summary}{}
 \newsummary{languages}{Golang, Python, Scala, JavaScript, C/C++}
 \quarterspace
-\newsummary{interests}{Distributed systems, Stream processing, System programming}
+\newsummary{interests}{Distributed systems, Stream processing, Cloud-native infrastructure}
 \quarterspace
 \newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, gRPC}
 
