--- a/resume.tex
+++ b/resume.tex
@@ -135,6 +135,8 @@ $\vert$ \small Front-End Engineer Intern
 \section*{Writings}{}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
+  \item \href{http://lpan.io/one-liner-dropbox-client}{\ul{My one-liner Dropbox
+        client}} (\textbf{HackerNews front-paged})
   \item \href{http://lpan.io/what-i-learnt-from-viw}{\ul{Lessons learned from
         writing a text editor in C}} (\textbf{HackerNews front-paged})
   \item \href{http://lpan.io/migrating-to-grpc}{\ul{How gRPC helps improve
