--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
 \usepackage{wrapfig}
 
 \titlespacing*{\section}
-{0pt}{2.7ex plus 1ex minus .2ex}{1.2ex plus .2ex}
+{0pt}{2.5ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
 \geometry{left=1.2cm, top=0.8cm, right=1.2cm, bottom=0.8cm, footskip=.5cm}
@@ -57,18 +57,23 @@
 % -------------------------------------------------------------------------------------
 \begin{document}
 
-{\fontsize{30}{40}\selectfont \hfill Lawrence Pan \par}
-\halfspace
+\begin{center}
+  {\fontsize{35}{40}\selectfont Lawrence Pan \par}
+  \halfspace
 
-{\normalsize \hfill lawrencefeipan@gmail.com \par}
-{\normalsize \hfill \http{lpan.io} $\bigcdot$ \https{github.com/lpan} \par}
+  {\normalsize
+    lawrencefeipan@gmail.com
+    $\bigcdot$ \http{lpan.io}
+    $\bigcdot$ \https{github.com/lpan}
+    \par}
+\end{center}
 
 \section*{Summary}{}
-\newsummary{languages}{Golang, Python, Scala, JavaScript, C/C++}
+\newsummary{languages}{Golang, Python, Java, Scala, JavaScript, C/C++}
 \quarterspace
-\newsummary{interests}{Distributed systems, Stream processing, Cloud-native infrastructure}
+\newsummary{interests}{Distributed systems, Streaming architecture, Cloud-native infrastructure}
 \quarterspace
-\newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, gRPC}
+\newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, Envoy}
 
 \section*{Experience}{}
 \noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
