--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 {0pt}{2.5ex plus 1ex minus .2ex}{1.2ex plus .2ex}
 
 \pagestyle{empty}
-\geometry{left=1.2cm, top=0.8cm, right=1.2cm, bottom=0.8cm, footskip=.5cm}
+\geometry{left=1.2cm, top=1.2cm, right=1.2cm, bottom=1.2cm, footskip=.5cm}
 
 % set underscore \ul{} x pt below contents
 \setul{2pt}{.4pt}
@@ -76,7 +76,7 @@
 \newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, Envoy}
 
 \section*{Experience}{}
-\noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plangrid.png}
+\noindent \includegraphics[width=0.7cm, height=0.7cm]{assets/plangrid.png}
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
 $\vert$ \small Infrastructure Engineer Intern
@@ -87,11 +87,11 @@ $\vert$ \small Infrastructure Engineer Intern
     infrastructure changes
   \item Extended the existing deployment system to support pre-deploy smoke tests
   \item Contributed to the effort of instrumenting distributed tracing, and
-    implementing Istio service mesh inside PlanGrid's Kubernetes cluster
+    implementing centralized authentication inside PlanGrid's Kubernetes cluster
 \end{itemize}
 
 \fullspace
-\noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/datadog.png}
+\noindent \includegraphics[width=0.7cm, height=0.7cm]{assets/datadog.png}
 \normalsize
 \noindent \href{https://datadoghq.com}{\textbf{\ul{Datadog}}}
 $\vert$ \small Distributed Systems Engineer Intern
@@ -100,15 +100,14 @@ $\vert$ \small Distributed Systems Engineer Intern
   \small
   \item Worked on the metrics submission pipeline that streams \textbf{millions} of data
     points per second
-  \item Owned the time-series creation service written in Golang by ensuring it
-    met its SLOs
+  \item Owned the time-series storage service written in Golang by ensuring its availability
   \item Migrated the service's IPC layer to gRPC. Implemented consistent hashing
     and request termination, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
 \end{itemize}
 
 \fullspace
-\noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/universe.png}
+\noindent \includegraphics[width=0.7cm, height=0.7cm]{assets/universe.png}
 \normalsize
 \noindent \href{https://universe.com}{\ul{\textbf{Universe}}}
 $\vert$ \small Full-Stack Engineer Intern
@@ -123,7 +122,7 @@ $\vert$ \small Full-Stack Engineer Intern
 \end{itemize}
 
 \fullspace
-\noindent \includegraphics[width=0.8cm, height=0.8cm]{assets/plotly.png}
+\noindent \includegraphics[width=0.7cm, height=0.7cm]{assets/plotly.png}
 \normalsize
 \noindent \href{https://plot.ly}{\textbf{\ul{Plotly}}}
 $\vert$ \small Front-End Engineer Intern
@@ -133,8 +132,6 @@ $\vert$ \small Front-End Engineer Intern
   \item Maintained and developed features for a
     \href{https://plot.ly/online-chart-maker/}{\ul{massive SaaS app}} built with
     React and Redux
-  \item Contributed to the development of an e2e testing framework written in
-    Python Selenium
 \end{itemize}
 
 \section*{Writings}{}
