make early co-op jobs less specific

--- a/resume.tex
+++ b/resume.tex
@@ -115,11 +115,10 @@ $\vert$ \small Full-Stack Engineer Intern
 {\hfill \footnotesize \textit{May 2017 - Aug 2017}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
+  \item Worked with PMs and designers to develop full-stack features using Ruby
+    on Rails and React
   \item Pioneered and shipped Universe's first front-end app that consumes its
     new GraphQL API
-  \item Designed and implemented an in-house framework for building
-    \href{https://www.universe.com/sell-tickets-on-your-website-with-universe-widgets}{\ul{Universe's
-        embedded widgets}}
 \end{itemize}
 
 \fullspace
