--- a/resume.tex
+++ b/resume.tex
@@ -87,7 +87,8 @@ $\vert$ \small Infrastructure Engineer Intern
     infrastructure changes
   \item Extended the existing deployment system to support pre-deploy smoke tests
   \item Contributed to the effort of instrumenting distributed tracing, and
-    implementing centralized authentication inside PlanGrid's Kubernetes cluster
+    implementing centralized authentication inside PlanGrid's
+    \textbf{Kubernetes} cluster
 \end{itemize}
 
 \fullspace
@@ -100,8 +101,8 @@ $\vert$ \small Distributed Systems Engineer Intern
   \small
   \item Worked on the metrics submission pipeline that streams \textbf{millions} of data
     points per second
-  \item Owned the time-series creation service written in Golang by ensuring its
-    availability
+  \item Owned the time-series creation service written in \textbf{Golang} by
+    ensuring its availability
   \item Migrated the service's IPC layer to gRPC. Implemented consistent hashing
     and request termination, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
