--- a/resume.tex
+++ b/resume.tex
@@ -82,15 +82,16 @@
 \noindent \includegraphics[width=0.7cm, height=0.7cm]{assets/plangrid.png}
 \normalsize
 \noindent \href{https://plangrid.com}{\textbf{\ul{PlanGrid}}}
-$\vert$ \small Infrastructure Engineer Intern
+$\vert$ \small Software Engineer Intern - Infrastructure
 {\hfill \footnotesize \textit{Sep 2018 - Dec 2018}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Built Spinnaker pipelines to allow phased rollout for ingress-related
-    infrastructure changes
-  \item Extended the existing deployment system to support pre-deploy smoke tests
-  \item Contributed to the effort of instrumenting distributed tracing, and
-    implementing centralized authentication inside PlanGrid's Kubernetes cluster
+  \item Implemented centralized authentication and path-based routing in
+    PlanGrid's Kubernetes cluster using Envoy. This greatly improved security and
+    developer productivity
+  \item Built Spinnaker pipelines to allow \textit{phased rollout} for
+    ingress-related infrastructure changes
+  \item Contributed to the effort of instrumenting distributed tracing
 \end{itemize}
 
 \fullspace
@@ -103,10 +104,10 @@ $\vert$ \small Software Engineer Intern - Distributed Systems
   \small
   \item Worked on the metrics submission pipeline that streams \textbf{millions} of data
     points per second
-  \item Owned the time-series creation service written in \textbf{Golang} by
-    ensuring its availability
-  \item Migrated the service's IPC layer to gRPC. Implemented consistent hashing
-    and request termination, details in
+  \item Owned the time-series creation service written in Golang by ensuring its
+    availability
+  \item Migrated the service's IPC layer to gRPC to improve reliability.
+    Implemented consistent hashing and request termination, details in
     \href{http://lpan.io/migrating-to-grpc}{\ul{blog post}}
 \end{itemize}
 
@@ -118,8 +119,8 @@ $\vert$ \small Full-Stack Engineer Intern
 {\hfill \footnotesize \textit{May 2017 - Aug 2017}}
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
-  \item Worked with PMs and designers to develop full-stack features using Ruby
-    on Rails and React
+  \item Developed numerous business-critical, A/B-tested, user-facing features
+    using React and Rails
   \item Pioneered and shipped Universe's first front-end app that consumes its
     new GraphQL API
 \end{itemize}
