--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 \section*{Summary}{}
 \newsummary{languages}{Golang, Python, Java, Scala, JavaScript, C/C++}
 \quarterspace
-\newsummary{interests}{Distributed systems, Cloud-native infrastructure, Streaming architecture}
+\newsummary{interests}{Distributed systems, Data infrastructure, Streaming architecture}
 \quarterspace
 \newsummary{technologies}{Kubernetes, Linux Kernel, Spark, Postgres, Kafka, Consul, Envoy}
 
@@ -87,11 +87,12 @@ $\vert$ \small Software Engineer Intern - Infrastructure
 \begin{itemize}[noitemsep,leftmargin=20pt,label=\raisebox{0.25ex}{\tiny$\bullet$},topsep=5pt]
   \small
   \item Implemented centralized authentication and path-based routing in
-    PlanGrid's Kubernetes cluster using Envoy. This greatly improved security and
+    PlanGrid's Kubernetes cluster using Envoy and Istio. This greatly improved
     developer productivity
   \item Built Spinnaker pipelines to allow \textit{phased rollout} for
     ingress-related infrastructure changes
-  \item Contributed to the effort of instrumenting distributed tracing
+  \item Contributed to the effort of instrumenting distributed tracing to
+    improve visibility
 \end{itemize}
 
 \fullspace
