change wording slightly

--- a/resume.tex
+++ b/resume.tex
@@ -73,8 +73,8 @@
     \par}
 \end{center}
 
-\newsummary{interests}{Distributed systems, Large-scale data processing/storage
-  systems, Algorithms}
+\newsummary{focus}{Distributed systems, Large-scale data processing/storage
+  infrastructure}
 \smolboispace
 \newsummary{languages}{Scala, Java, Golang, Python, JavaScript, C/C++}
 
